<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">WmChatSDKDemo</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="login_failed">登录失败</string>
    <string name="uniqueId">uniqueId</string>
    <string name="clientId">clientId</string>
    <string name="clientSecret">clientSecret</string>
    <string name="pushNickName">收到消息时对方的push/notification中的昵称</string>
    <string name="onlinePlatform">正式平台</string>
    <string name="testPlatform">测试平台</string>
    <string name="login">登录</string>
    <string name="login_ing">登录中&#8230;</string>
    <string name="already_login">已经登录</string>
    <string name="logout">退出登录</string>
    <string name="logout_failed">退出失败</string>
    <string name="chat">聊天</string>
	<string name="notiSetting">提醒设置</string>
	<string name="black">黑名单</string>
	<string name="group">群组</string>
	<string name="open_conversation">打开会话</string>
	<string name="input_single_chat_uid">输入单聊对象uid</string>
	<string name="open_single_chat">进入单聊</string>
	<string name="clear_single_chat_record">清空单聊聊天记录</string>
	<string name="input_group_chat_gid">输入群组id</string>
	<string name="open_group_chat">进入群聊</string>
	<string name="clear_group_chat_record">清空群聊聊天记录</string>
	<string name="clear_all_chat_record">清空所有聊天记录</string>
	<string name="handle_success">操作成功</string>
	<string name="confirm">确定</string>
	<string name="see_noti_time">查看提醒时段</string>
	<string name="begin_time">开始时间</string>
	<string name="end_time">结束时间</string>
	<string name="hour">时</string>
	<string name="no_info">无信息</string>
	<string name="set_success">设置成功</string>
	<string name="set_failed">设置失败</string>
	<string name="get_black_list">获取黑名单列表</string>
	<string name="set_noti_time_hint">设置提醒时段&#040;0&#045;24整数&#041;&#058;</string>
	<string name="set_noti_time">设置提醒时段</string>
	<string name="user_id">用户id</string>
	<string name="add_black">将用户加入黑名单</string>
	<string name="del_black">将用户移出黑名单</string>
	<string name="del_success">删除成功</string>
	<string name="del_failed">删除失败</string>
	<string name="add_success">添加成功</string>
	<string name="add_failed">添加失败</string>
	<string name="get_failed">获取失败</string>
	<string name="create_group">创建群组</string>
	<string name="group_id">群组id</string>
	<string name="member_uids_hint">成员uid&#032;用逗号分隔</string>
	<string name="add_group_member">添加群组成员</string>
	<string name="del_group_member">踢人</string>
	<string name="get_group_members">获取群组成员列表</string>
	<string name="get_my_groups">获取我的群组列表</string>
	<string name="create_failed">创建失败</string>
	<string name="create_success">创建成功</string>
	<string name="remove_success">移除成功</string>
	<string name="remove_failed">移除失败</string>
	<string name="exit_group">退出群组</string>
	<string name="exit_failed">退出失败</string>
	<string name="exit_success">退出成功</string>
	<string name="close_noti">关闭提醒</string>
	<string name="set_push_nick_name">设置推送昵称</string>
	<string name="group_vibrate_open">群聊震动(开启)</string>
	<string name="group_vibrate_close">群聊震动(关闭)</string>
	<string name="group_sound_open">群聊响铃(开启)</string>
	<string name="group_sound_close">群聊响铃(关闭)</string>
	<string name="single_vibrate_open">单聊震动(开启)</string>
	<string name="single_vibrate_close">单聊震动(关闭)</string>
	<string name="single_sound_open">单聊响铃(开启)</string>
	<string name="single_sound_close">单聊响铃(关闭)</string>
	<string name="test_user">测试用户</string>
	<string name="send_custom_msg">发送自定义消息</string>
	<string name="msg_type_hint">消息类型 大于等于60000[必填项]</string>
    <string name="send">发送</string>
    <string name="content_hint">消息内容</string>
    <string name="content_error">消息内容不能为空</string>
    <string name="id_hint">群id/个人id[必填项]</string>
    <string name="open_sdk_content_hint">附加内容</string>
    <string name="single_chat_hint">单聊</string>
    <string name="group_chat_hint">群聊</string>
    <string name="msg_type_error">消息类型有误</string>
    <string name="id_error">id有误</string>
    <string name="send_success">发送成功</string>
</resources>