<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <Button
            android:id="@+id/conversationBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/open_conversation"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/uidEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/input_single_chat_uid"
                android:inputType="number" />

            <Button
                android:id="@+id/singleChatBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/open_single_chat" />

            <Button
                android:id="@+id/clearSingleChatRecord"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/clear_single_chat_record" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/gidEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/input_group_chat_gid"
                android:inputType="number"/>

            <Button
                android:id="@+id/groupChatBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/open_group_chat" />

            <Button
                android:id="@+id/clearGroupChatRecord"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/clear_group_chat_record" />
        </LinearLayout>

        <Button
            android:id="@+id/clearAllChatRecord"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/clear_all_chat_record" />
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/pushNickNameEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/pushNickName"/>

            <Button
                android:id="@+id/setPushNickNameBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/set_push_nick_name" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>