<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/uniqueIdEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/uniqueId" />

        <EditText
            android:id="@+id/clientIdEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/clientId" />

        <EditText
            android:id="@+id/clientSecretEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/clientSecret" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/onlinePlatform"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/onlinePlatform" />

            <RadioButton
                android:id="@+id/testPlatForm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/testPlatform" />
        </RadioGroup>

        <Button
            android:id="@+id/loginBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login" />
    </LinearLayout>

</ScrollView>