<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <Button
            android:id="@+id/createGroupBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_group" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/gidEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/group_id"
                android:inputType="number" />

            <EditText
                android:id="@+id/uidsEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/member_uids_hint" />

            <Button
                android:id="@+id/addGroupMemberBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_group_member" />
            <Button
                android:id="@+id/delGroupMemberBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/del_group_member" />
        </LinearLayout>
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/gid2Et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/group_id"
                android:inputType="number" />

            <Button
                android:id="@+id/getGroupMembersBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/get_group_members" />
            
            <Button
                android:id="@+id/exitGroupBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/exit_group" />
        </LinearLayout>
        
        <Button
            android:id="@+id/getMyGroupsBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/get_my_groups" />
    </LinearLayout>

</ScrollView>